fixed z-index for cards

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   position: relative;
-  z-index: -1;
+
 }
 
 .homecontent {
@@ -18,8 +18,6 @@
 .coverImage {
   width: 90vw;
   height: auto;
-
-  z-index: -2;
 }
 
 .coverImage img {
@@ -38,7 +36,7 @@
   align-items: flex-start;
   flex-wrap: wrap;
   gap: 10%;
-  z-index: -5;
+
   height: 350px;
   margin-bottom: 20px;
 } */
@@ -48,7 +46,6 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  z-index: -5;
   gap: 40px;
   margin-bottom: 100px;
   height: fit-content;
