--- a/styles/card.module.css
+++ b/styles/card.module.css
@@ -4,18 +4,18 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  z-index: 0;
+
 }
 
 .image {
   width: 100%;
   height: 100%;
-  z-index: -1;
+
   object-fit: cover;
 }
 
 .cardBody {
-  z-index: 1;
+
   position: absolute;
   height: 420px;
   width: 320px;
