--- a/styles/events.module.css
+++ b/styles/events.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   /* text-align: center; */
   position: relative;
-  z-index: -2;
+
 }
 
 .eventContent {
