--- a/styles/nav.module.css
+++ b/styles/nav.module.css
@@ -3,7 +3,7 @@
   justify-content: flex-end;
   padding-right: 5%;
   height: 50px;
-  z-index: -2;
+  z-index: 2;
   /* background-color: white;
   box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.04); */
 }
@@ -16,7 +16,7 @@
   gap: 40px;
   color: black;
   font-size: 14px;
-  z-index: 1;
+  z-index: 3;
 }
 
 .cartDiv {
