--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -2,10 +2,10 @@
   width: 100vw;
   height: 12vh;
   position: fixed;
-  z-index: 100;
   background-color: white;
   box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.04);
   top: 0;
+  z-index: 2;
 
   /* background-color: white; */
 }
