--- a/styles/shop.module.css
+++ b/styles/shop.module.css
@@ -4,7 +4,6 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  z-index: 0;
 }
 
 .shopcontent {
